--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "Host=localhost;Database=CTM;Username=postgres;Password=placeholder"
   },
   "Logging": {
     "LogLevel": {
